# zenn-scout

./: .gitignore  README.md  pyproject.toml
src/zenn_scout/: api.py  cli.py  db.py  store.py
