[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zenn-scout"
version = "0.1.0"
description = "Zenn 記事巡回・データ収集ツール"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
zenn-scout = "zenn_scout.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/zenn_scout"]
